tests/negative/typecheck/typeclass_eq.orng
// typeclass_eq.orng:9:30: error: error: expected a compile-time constant type, got unreachable
//     let x: Void = unreachable
//                             ^
// typeclass_eq.orng:10:30: error: error: expected a compile-time constant type, got unreachable
//     let y: Void = unreachable
//                             ^
// 
fn main() -> Bool {
    let x: Void = unreachable
    let y: Void = unreachable
    x == y // the ONLY type that isn't equalable
}